# protobuf

./: .deepsource.toml  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.markdown  README.md  encoding.py  index-1.html  mkdocs.yml  protobuf.py  pyproject.toml  remoting.py  renovate.json  run-performance-tests.py  run-tests.py  run-unit-tests.py  setup.cfg  setup.py
.github/: FUNDING.yml  dependabot.yml  release.yml
.github/workflows/: check.yml  docs.yml  publish.yml
docs/: annotating_fields.md  base_message.md  custom_field_types.md  index.html  index.md  migration.md  well_known.md
pure_protobuf/: __init__.py  _accumulators.py  _mergers.py  annotations.py  dataclasses_.py  enums.py  exceptions.py  fields.py  google.py  io_.py  legacy.py  message.py  one_of.py  oneof.py  protobuf.py  serializers.py  six.py  types.py  well_known.py
pure_protobuf/descriptors/: _field.py  record.py
pure_protobuf/helpers/: _dataclasses.py  _typing.py  datetime.py  io.py  itertools.py
pure_protobuf/interfaces/: _repr.py  _skip.py  accumulate.py  merge.py  read.py  write.py
pure_protobuf/io/: bytes_.py  fixed32.py  struct_.py  tag.py  url.py  varint.py  wire_type.py  wrappers.py
pure_protobuf/serializers/: __init__.py  google.py
pure_protobuf/types/: __init__.py  google.py
tests/: __init__.py  conftest.py  definitions.py  test_dataclasses.py  test_docs.py  test_fields.py  test_legacy.py  test_message.py  test_oneof.py  test_performance.py  test_protobuf.py  test_readme.py  test_serializers.py  test_unit.py  test_well_known.py
tests/descriptors/: test_field.py  test_record.py
tests/helpers/: test_datetime.py  test_typing.py
tests/interfaces/: test_repr.py
tests/io/: test_bytes.py  test_tag.py  test_varint.py
tests/message/: test_dataclass.py  test_pydantic.py
tests/types/: test_google.py
